--- a/app/src/main/res/layout/beneficiary_detail_dialog.xml
+++ b/app/src/main/res/layout/beneficiary_detail_dialog.xml
@@ -10,7 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name"
-        android:textAppearance="?android:attr/textAppearanceMedium"/>
+        android:textSize="20sp"
+        android:textStyle="bold"
+       />
 
     <TextView
         android:id="@+id/dialog_ssn"
