--- a/app/src/main/res/layout/beneficiary_detail_dialog.xml
+++ b/app/src/main/res/layout/beneficiary_detail_dialog.xml
@@ -10,36 +10,71 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/dialog_ssn_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="SSN"
         android:textSize="20sp"
-        android:textStyle="bold"
-       />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/dialog_ssn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="SSN"
-        android:layout_marginTop="8dp"/>
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/dialog_dob_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Date of Birth"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/dialog_dob"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Date of Birth"
-        android:layout_marginTop="8dp"/>
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/dialog_phone_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Phone Number"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/dialog_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Phone Number"
-        android:layout_marginTop="8dp"/>
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/dialog_address_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Address"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/dialog_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Address"
-        android:layout_marginTop="8dp"/>
+        android:textSize="16sp" />
 
 </LinearLayout>
