--- a/app/src/main/res/layout/beneficiary_item.xml
+++ b/app/src/main/res/layout/beneficiary_item.xml
@@ -47,6 +47,7 @@
         </LinearLayout>
 
         <ImageView
+            android:id="@+id/iv_arrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
