--- a/app/src/main/res/layout/beneficiary_detail_dialog.xml
+++ b/app/src/main/res/layout/beneficiary_detail_dialog.xml
@@ -9,7 +9,7 @@
         android:id="@+id/dialog_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Beneficiary Details"
+        android:text="@string/beneficiary_details"
         android:textSize="24sp"
         android:textStyle="bold"
         android:gravity="center_horizontal"
@@ -19,7 +19,6 @@
         android:id="@+id/dialog_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name"
         android:textSize="24sp"
         android:textStyle="bold" />
 
@@ -28,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="SSN"
+        android:text="@string/ssn"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -36,7 +35,6 @@
         android:id="@+id/dialog_ssn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SSN"
         android:textSize="16sp" />
 
     <TextView
@@ -44,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Date of Birth"
+        android:text="@string/date_of_birth"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -52,7 +50,6 @@
         android:id="@+id/dialog_dob"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Date of Birth"
         android:textSize="16sp" />
 
     <TextView
@@ -60,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Phone Number"
+        android:text="@string/phone_number"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -68,7 +65,6 @@
         android:id="@+id/dialog_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Phone Number"
         android:textSize="16sp" />
 
     <TextView
@@ -76,7 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Address"
+        android:text="@string/address"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -84,7 +80,6 @@
         android:id="@+id/dialog_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Address"
         android:textSize="16sp" />
 
 </LinearLayout>
