--- a/app/src/main/res/layout/beneficiary_item.xml
+++ b/app/src/main/res/layout/beneficiary_item.xml
@@ -12,7 +12,7 @@
         android:padding="10dp">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_weight="1"
@@ -22,7 +22,6 @@
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="firstName LastName"
                 android:textColor="#000"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -31,7 +30,7 @@
                 android:id="@+id/tv_benefit_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="0dp"
                 android:textSize="16sp"
                 tools:text="Benefit Type" />
 
@@ -53,6 +52,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
+            android:contentDescription="@string/show_details_button"
             android:src="@drawable/baseline_subdirectory_arrow_right_24" />
     </LinearLayout>
 
